--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "license": "MIT",
   "scripts": {
     "build": "npm run clean && npm run lint && tsc",
+    "bump": "npm version minor && npm publish",
+    "bumpfix": "npm version patch && npm publish",
     "clean": "rm -rf dist/",
     "lint": "tslint --project .",
-    "prepare": "npm run build"
+    "postversion": "git push --follow-tags",
+    "prepare": "npm run build",
+    "preversion": "npm run build"
   },
   "devDependencies": {
     "@types/node": "^10.10.1",
