--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "types": ["node"],
     "sourceMap": true,
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "declarationMap": true
   },
   "exclude": ["node_modules", "dist"]
 }
