--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "private": false,
   "version": "3.1.0",
   "description": "Easy validation",
-  "main": "lib/index.js",
+  "main": "lib/bundle.js",
+  "module": "lib/bundle.mjs",
+  "types": "lib/index.d.ts",
   "repository": "https://github.com/futurematik/validation",
   "author": "Gordon Leigh <gordon.leigh@futurematik.co.uk>",
   "license": "MIT",
   "scripts": {
-    "build": "npm run clean && npm run lint && tsc",
+    "build": "npm run clean && npm run lint && npm run compile",
     "bumpfeat": "npm version minor && npm publish",
     "bumpfix": "npm version patch && npm publish",
     "bumpmajor": "npm version major && npm publish",
     "clean": "rm -rf lib/",
+    "compile": "rollup -c",
     "lint": "eslint \"src/**\"",
     "postversion": "git push --follow-tags",
     "prepare": "npm run build",
@@ -26,6 +29,8 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.18.2",
+    "rollup": "^1.23.1",
+    "rollup-plugin-typescript2": "^0.24.3",
     "typescript": "^3.6.3"
   }
 }
