--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2015",
-    "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "strict": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "outDir": "lib",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "experimentalDecorators": true,
+    "lib": ["es2015"],
+    "module": "es2015",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "noUnusedLocals": true,
+    "outDir": "lib",
+    "rootDir": "src/",
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2015"
   },
   "include": ["src"],
   "exclude": ["node_modules", "lib"]
