--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "preversion": "npm run build"
   },
   "devDependencies": {
+    "@fmtk/rollup-plugin-ts": "^0.2.0",
     "@types/node": "^12.0",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
@@ -30,7 +31,6 @@
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.18.2",
     "rollup": "^1.23.1",
-    "rollup-plugin-typescript2": "^0.24.3",
     "typescript": "^3.6.3"
   }
 }
