--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "3.3.1",
   "description": "Easy validation",
   "main": "lib/bundle.js",
-  "module": "lib/bundle.mjs",
+  "module": "lib/bundle.esm.js",
   "types": "lib/index.d.ts",
   "repository": "https://github.com/futurematik/validation",
   "author": "Gordon Leigh <gordon.leigh@futurematik.co.uk>",
@@ -22,7 +22,7 @@
     "preversion": "npm run build"
   },
   "devDependencies": {
-    "@fmtk/rollup-plugin-ts": "^0.2.0",
+    "@fmtk/rollup-plugin-ts": "^0.3.0",
     "@types/node": "^12.0",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
