--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
-    "experimentalDecorators": true,
+    "importHelpers": true,
     "lib": ["es2015"],
     "module": "es2015",
     "moduleResolution": "node",
