--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   },
   "devDependencies": {
     "@fmtk/rollup-plugin-ts": "^0.3.0",
+    "@types/jest": "^24.0.21",
     "@types/node": "^12.0",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "rollup": "^1.23.1",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   }
 }
