--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,11 @@
     "plugin:prettier/recommended"
   ],
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 2020,
     "sourceType": "module"
   },
   "rules": {
-    "@typescript-eslint/no-use-before-define": ["warn", { "functions": false }]
+    "@typescript-eslint/no-use-before-define": ["warn", { "functions": false }],
+    "@typescript-eslint/ban-types": ["warn"]
   }
 }
